<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ODROID Utility</string><string name="action_settings">Settings</string>
    
    <string name="cpu">CPU</string>
    <string name="screen">Screen</string>
    <string name="cpu_governor">CPU Governor</string>
    <string name="cpu_max_freq">CPU Max Frequency</string>
    <string name="cpu_min_freq">CPU Min Frequency</string>
    <string name="cpu_freq">CPU Frequency</string>
    <string name="buttons">Buttons</string>
    <string name="left_handed">Left-handed</string>
    <string name="right_handed">Right-handed</string>
    <string name="mouse">Mouse</string>
    <string name="apply">Save</string>
    <string name="vout_mode">vout mode</string>
    <string name="hdmi">HDMI</string>
    <string name="dvi">DVI</string>
    <string name="resolution">Resoultion</string>
    <string name="r1280x800_lcd">1280 x 800 (LCD)</string>
    <string name="r1280x800">1280 x 800 (ODROID-VU)</string>
    <string name="r1920x1080">1920 x 1080</string>
    <string name="r1280x720">1280 x 720</string>
    <string name="apply_reboot">Apply and Reboot</string>
    
    
    <string name="hdmi_phy">HDMI phy</string>
    <string name="fake_fb">LCD Mode ( for ODROID-X/X2 LCD Kit)</string>
    <string name="fb_true">True</string>
    <string name="fb_false">False</string>
    <string name="portrait">HDMI Portrait</string>
    <string name="landscape">HDMI Landscape</string>
    <string name="lcd">LCD</string>
    <string name="p800p59">800P 59Hz</string>
    <string name="p720p50">720P 50Hz</string>
    <string name="p720p60">720P 60hz</string>
    <string name="p1080i60">1080I 60Hz</string>
    <string name="p1080p30">1080P 30Hz</string>
    <string name="p1080i50">1080I 50Hz</string>
    <string name="p1080p50">1080P 50Hz</string>
    <string name="p1080p60">1080P 60Hz</string>
    <string name="r1080x1920">1080 x 1920</string>
    <string name="r720x1080">720 x 1280</string>
    <string name="degree_90">90°</string>
    <string name="degree_270">270°</string>
    <string name="top">Top</string>
    <string name="bottom">Bottom</string>
    <string name="left">Left</string>
    <string name="right">Right</string>
    <string name="left_arrorw">◀</string>
    <string name="right_arrow">▶</string>
    <string name="up_arrow">▲</string>
    <string name="down_arrow">▼</string>
    <string name="zero">0</string>
    <string name="kodi">Auto start KODI on boot.</string>

    <string name="enter_url">Please enter your Android update server URL properly</string>
</resources>
