<RelativeLayout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <TabHost
        android:id="@android:id/tabhost"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <Button
                android:id="@+id/button_apply_reboot"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/apply_reboot" />

            <TabWidget
                android:id="@android:id/tabs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >
            </TabWidget>

            <FrameLayout
                android:id="@android:id/tabcontent"
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <LinearLayout
                    android:id="@+id/tab6"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical" >

                    <RadioGroup
                        android:id="@+id/radioGroup4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" >

                        <RadioButton
                            android:id="@+id/radio_analog_mic"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:checked="true"
                            android:text="@string/amic" />

                        <RadioButton
                            android:id="@+id/radio_digital_mic"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/dmic" />
                    </RadioGroup>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/tab5"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical" >

                    <RadioGroup
                        android:id="@+id/radioGroup2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="20dp"
                        android:layout_marginTop="20dp" >

                        <RadioButton
                            android:id="@+id/radio_mipi"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:checked="true"
                            android:text="@string/mipi_camera" />

                        <RadioButton
                            android:id="@+id/radio_uvc"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/uvc_camera" />
                    </RadioGroup>

                    <Button
                        android:id="@+id/button_camera_apply"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:text="@string/apply_reboot" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/tab4"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical" >

                    <RadioGroup
                        android:id="@+id/radioGroup3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" >

                        <RadioButton
                            android:id="@+id/radio_potrait"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:checked="true"
                            android:text="@string/portrait" />

                        <RadioButton
                            android:id="@+id/radio_landscape"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/landscape" />
                    </RadioGroup>

                    <Button
                        android:id="@+id/button_rotation_apply"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/apply" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/tab3"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical" >

                    <TextView
                        android:id="@+id/textView4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:text="@string/vout_mode"
                        android:textAppearance="?android:attr/textAppearanceMedium" />

                    <RadioGroup
                        android:id="@+id/radioGroup1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal" >

                        <RadioButton
                            android:id="@+id/radio_hdmi"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="5dp"
                            android:checked="true"
                            android:text="@string/hdmi" />

                        <RadioButton
                            android:id="@+id/radio_dvi"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="10dp"
                            android:text="@string/dvi" />
                    </RadioGroup>

                    <TextView
                        android:id="@+id/textView_lcd"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:text="@string/fake_fb"
                        android:textAppearance="?android:attr/textAppearanceMedium" />

                    <RadioGroup
                        android:id="@+id/radioGroup_lcd"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal" >

                        <RadioButton
                            android:id="@+id/radio_lcd_false"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="5dp"
                            android:checked="true"
                            android:text="@string/fb_true" />

                        <RadioButton
                            android:id="@+id/radio_lcd_true"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="10dp"
                            android:text="@string/fb_false" />
                    </RadioGroup>

                    <TextView
                        android:id="@+id/textView5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:text="@string/resolution"
                        android:textAppearance="?android:attr/textAppearanceMedium" />

                    <RadioGroup
                        android:id="@+id/radioGroup_resolution"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal" >

                        <RadioButton
                            android:id="@+id/radio_r1360"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="5dp"
                            android:checked="true"
                            android:text="@string/r1360x768" />

                        <RadioButton
                            android:id="@+id/radio_r1280"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="10dp"
                            android:text="@string/r1280x720" />

                        <RadioButton
                            android:id="@+id/radio_r1920"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="10dp"
                            android:text="@string/r1920x1080" />
                    </RadioGroup>

                    <TextView
                        android:id="@+id/textView6"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:text="@string/hdmi_phy"
                        android:textAppearance="?android:attr/textAppearanceMedium" />

                    <RadioGroup
                        android:id="@+id/radioGroup_phy"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal" >

                        <RadioButton
                            android:id="@+id/radio_p720p50"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/p720p50" />

                        <RadioButton
                            android:id="@+id/radio_p720p60"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="5dp"
                            android:checked="true"
                            android:text="@string/p720p60" />

                        <RadioButton
                            android:id="@+id/radio_p1080p50"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/p1080p50" />

                        <RadioButton
                            android:id="@+id/radio_p1080p60"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="10dp"
                            android:text="@string/p1080p60" />

                        <RadioButton
                            android:id="@+id/radio_p1080i60"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/p1080i60" />
                    </RadioGroup>

                    <Button
                        android:id="@+id/button_screen_apply"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:text="@string/apply" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/tab2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical" >

                    <RadioGroup
                        android:id="@+id/radioGroup_mouse"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:layout_marginTop="20dp" >

                        <RadioButton
                            android:id="@+id/radio_left"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:checked="true"
                            android:text="@string/left_handed" />

                        <RadioButton
                            android:id="@+id/radio_right"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/right_handed" />
                    </RadioGroup>

                    <Button
                        android:id="@+id/button_mouse_apply"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:text="@string/apply" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/tab1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical" >

                    <TextView
                        android:id="@+id/textView1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:text="@string/cpu_governor"
                        android:textAppearance="?android:attr/textAppearanceMedium" />

                    <Spinner
                        android:id="@+id/spinner_governors"
                        android:layout_width="600dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:layout_weight="0" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="30dp" >

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:orientation="vertical" >

                            <TextView
                                android:id="@+id/textView2"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/cpu_max_freq"
                                android:textAppearance="?android:attr/textAppearanceMedium" />

                            <Spinner
                                android:id="@+id/spinner_max_freq"
                                android:layout_width="300dp"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="10dp" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_marginLeft="30dp"
                            android:orientation="vertical" >

                            <TextView
                                android:id="@+id/textView3"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/cpu_min_freq"
                                android:textAppearance="?android:attr/textAppearanceMedium" />

                            <Spinner
                                android:id="@+id/spinner_min_freq"
                                android:layout_width="300dp"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="10dp"
                                android:layout_weight="0" />
                        </LinearLayout>
                    </LinearLayout>
                </LinearLayout>
            </FrameLayout>
        </LinearLayout>
    </TabHost>

</RelativeLayout>